Quick fix for 2 SonarQube issues