@@ -20,7 +20,7 @@ public class GlobalExceptionHandler {
         List<String> errors = ex.getBindingResult()
                 .getAllErrors().stream()
                 .map(DefaultMessageSourceResolvable::getDefaultMessage)
-                .collect(Collectors.toList());
+                .toList();
         return new ResponseEntity<>(errors, HttpStatus.BAD_REQUEST);
     }
 
